# dsgrid

./: .buildinfo  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  DAILY_TIME_DIMENSION_PLAN.md  Dockerfile  MANIFEST.in  README.md  build_backend.py  codecov.yml  data_format.md  environment.yml  genindex.html  index.html  journal__d71f172b-35aa-4e43-914b-9c05c5b19d4a.json5  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  spark_overview.html  special.html  test_efs_comstock__missing_dimension_record_combinations.csv  test_efs_comstock__missing_dimension_record_combinations.parquet  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
_images/: graphviz-0060880d8532be3de7ab93dcc91e97869e305508.png.map  graphviz-037abf51c9a0feac43500d6283fab6382fd3cd63.png.map  graphviz-03c14a600c4bf45feedfdd0aecbd5dc3a77a0e8b.png.map  graphviz-050340d6f3f18a8d03c5ac368be8faf0e2395f9a.png.map  graphviz-05552d83038cbf3a592b1238d79e20759167ef14.png.map  graphviz-05c715f3851fe262990fb791764d8c54e72b12cd.png.map  graphviz-07374182e03d378c96991e6b38cd2616375d2d04.png.map  graphviz-091fdcafec4dda054a3f0545e2e2d0d87223f0d8.png.map  graphviz-09f1c0321b435f971bb9b338bae708b71c39687c.png.map  graphviz-09fc83b27aea43b79cce0673f8ac647eb3ac541f.png.map  graphviz-0ac496a6e62fb0815db7efd5bfa2df6fb5e2c839.png.map  graphviz-0ad503c63c3c8f292c39ab912711f9fbfe9a7e53.png.map  graphviz-0d25025fa07a754df698c7a57d665290612eeef5.png.map  graphviz-0dbcb9bcc3005ab7097868647059f4deaf25000d.png.map  graphviz-0f46445f37b840a9a93a7a5eabc896e78a16768c.png.map  graphviz-0f694e28f1853760d0d62f0ad59058ef704e025e.png.map  graphviz-101e3b63aecdda979f27a0501fdf0d6619f85114.png.map  graphviz-134ba805f4f5ff7ccc0906b6c5eee3fc9c31a947.png.map  graphviz-16a5fd440daba8f99432bbd5c3ce0a3b3ba30232.png.map  graphviz-18efb9b232f0e04bc3c29f9540b6867ff3aefd30.png.map  graphviz-1b3ca1f21b1f6d92a2b4b2024ea006e8eac70fc0.png.map  graphviz-1b9c21eefb1430dee77d23c8c5c60612e269aade.png.map  graphviz-1bd773de052adf1360337a998a3826d029695317.png.map  graphviz-1c151998845f7dbd3e1b03e8ac8cdbd3433be180.png.map  graphviz-1f5b373896051609064b54c139fe7fd6875edcc9.png.map  graphviz-1f74651116490cadce9636b4779f859ff706243a.png.map  graphviz-2041aa1a31accb44cdba1d2d20f449bffbe9475a.png.map  graphviz-20703d4caf685fc47d28bf6cd08b6c21ee3341bb.png.map  graphviz-20f1e7e00e72b4b8fcf98710e1f10fec106c0467.png.map  graphviz-2193e4751d90d34998ac4dc706eeff47a874f0b9.png.map  graphviz-23892f935b573c8f639ea8b89652013499b6e4cd.png.map  graphviz-242b8bbd78f42f61fcca20393de56db8189ccacc.png.map  graphviz-24abcf82e893981c6d1db45aeb0f8feee759619a.png.map  graphviz-255f42ee56bb03af3d9cc865e269825849a0233b.png.map  graphviz-25cb97833f9f83e18b243c063d24c380703740ed.png.map  graphviz-2757e10045d037ec6b3e02e8ba2127d5f9fba0a3.png.map  graphviz-2928ec8064ee6cb8d1b7c35aca262a08a53d1a00.png.map  graphviz-294286b3d7e1c137894fc9e52d070c83e03bd59c.png.map  graphviz-2abb7bce27a5c18a04e324eee29374ed08a06af1.png.map  graphviz-2c7a1e3bd89a36be2055d5c6c5cc718c52415b1f.png.map  (+186 more)
_modules/: index.html
_sources/: index.rst.txt  spark_overview.rst.txt  special.rst.txt
_static/: copybutton.js  documentation_options.js
dev/: README.md  md_to_rst.py  registry_database.md  spark_overview.md
doc/: Makefile  api.rst  conf.py  config_data_models.rst  data_format.md  data_format.rst  index.postfix  index.rst  make.bat  make_config_model_tables.py  md_files.txt
docker/: vimrc
docs/: MIGRATION_PLAN.md  Makefile  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REORGANIZATION_ANALYSIS.md  generate_all_models.py  generate_enums.py  generate_model_tables.py  make.bat  make_config_model_rst.py  make_config_model_tables.py  make_example_configs.py
dsgrid/: __init__.py  _version.py  chronify.py  common.py  data_models.py  dataset.py  dsgrid_rc.py  exceptions.py  ibis_api.py  loggers.py  models.py  project.py  query.py
emr/: README.md  bootstrap-pyspark  emr_config.yml  emr_config_example.yml  environment.yml  launch_emr.py  pyproject.toml  requirements.txt  running_cluster_id.txt
explanations/: index.html  queries.html
how_tos/: browse_registry.html  create_dataset_dimensions.html  create_derived_dataset.html  create_project_base_dimensions.html  create_project_supplemental_dimensions.html  filter_a_query.html  index.html  installation.html  query_project.html  run_dsgrid_on_kestrel.html  set_up_standalone_registry.html  spark_cluster_on_kestrel.html  visualize_data_with_tableau.html
missing_associations/: geography__subsector.csv
reference/: architecture.html  cli.html  cli_fundamentals.html  dataset_formats.html  index.html
rust/: Cargo.toml  README.md
rust/src/: lib.rs
scripts/: create_simple_standard_scenarios.sh  enumerate_load_table_lookup.ipynb  enumerate_load_table_lookup.py  filter_ss.json  migrate_dataset_configs.py  registry.py  restore_simple_standard_scenarios.sh  shorten_simple_std_scns_filenames.py  show_parquet_time_schema.py  start_arangodb_on_eagle.sh  start_arangodb_on_kestrel.sh  start_spark_and_arango_on_eagle.sh  start_spark_and_arango_on_kestrel.sh  table_metadata.py
tests/: common.py  conftest.py  make_us_data_registry.py  simple_standard_scenarios_datasets.py  test_aeo_dataset_registration.py  test_annual_time.py  test_api.py  test_convert_time_format_if_necessary.py  test_create_time_dimensions.py  test_daily_time.py  test_dataset.py  test_dataset_expression_handler.py  test_dataset_registration.py  test_dataset_utils.py  test_datasets.py  test_derived_datasets.py  test_dimension_associations.py  test_dimension_config.py  test_dimension_store.py  test_file_schema.py  test_file_schemas.py  test_files_utils.py  test_filter_registry.py  test_find_minimal_patterns.py  test_localize_timestamps_if_necessary.py  test_missing_dimension_records.py  test_project.py  test_project_config.py  test_project_time.py  test_queries.py  test_register_project.py  test_registration_models.py  test_registry_list.py  test_registry_management.py  test_representative_time.py  (+11 more)
(+522 files in other folders)
