[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsgrid"
dynamic = ["version"]
copyright = "Copyright 2023, The Alliance for Sustainable Energy, LLC"
description = "Python API for accessing demand-side grid model (dsgrid) datasets"
url = "https://github.com/dsgrid/dsgrid"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["dsgrid"]
authors = [
    {name = "Elaine Hale", email = "elaine.hale@nrel.gov"},
    {name = "Lixi Liu", email = "lixi.liu@nrel.gov"},
    {name = "Meghan Mooney", email = "meghan.mooney@nrel.gov"},
    {name = "Daniel Thom", email = "daniel.thom@nrel.gov"},
]
maintainers = [
    {name = "Elaine Hale", email = "elaine.hale@nrel.gov"}
]
include_package_data = true
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # We may need these again in the future.
    # "awscliv2",
    # "boto3",
    # "s3path",
    "chronify ~= 0.2.0",
    "click>=8",
    "dash",
    "dash_bootstrap_components",
    "duckdb >= 1, < 2",
    "fastapi",
    "json5",
    "pandas",
    "prettytable",
    "pyarrow",
    "pydantic~=2.9.2",
    "requests",
    "rich_click",
    "semver",
    "sqlalchemy >= 2, < 3",
    "uvicorn",
    "tzdata",  # time zone stuff
]

[tool.hatch.version]
path = "dsgrid/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
spark = [
    "chronify[spark]",
    "pyhive @ git+https://github.com/apache/kyuubi.git#egg=pyhive&subdirectory=python",
    "pyspark==3.5.4",  # Keep this synced with the spark version in Dockerfile.
    "thrift",
    "thrift_sasl",
]

dev = [
    "httpx",  # starlette, used by fastapi, requires this as an optional dependency for testing.
    "pytest",
    "pytest-cov",
    "black>=22.3.0",
    "pre-commit",
    "devtools",
    "flake8",
    "pyarrow",
]

doc = [
    "furo",
    "ghp-import",
    "numpydoc",
    "sphinx~=7.2",
    "sphinx-click~=5.0",
    "sphinx-copybutton~=0.5.2",
    "sphinx-tabs~=3.4",
    "sphinx_argparse~=0.4.0",
    "sphinxcontrib.programoutput",
    "autodoc_pydantic[erdantic]~=2.0",
]

release = [
    "twine",
    "setuptools",
    "wheel",
]

[project.scripts]
dsgrid = "dsgrid.cli.dsgrid:cli"
# This exists because spark-submit does not recognize the above 'dsgrid' as a Python
# application.
"dsgrid-cli.py" = "dsgrid.cli.dsgrid:cli"
dsgrid-admin = "dsgrid.cli.dsgrid_admin:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.black]
line-length = 99
target-version = ['py311']
