[tool.poetry]
name = "dsgrid"
version = "0.1.0"
description = "EMR boilerplate for dsgrid"
authors = ["roliveir <ricardo.oliveira@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
botocore = "1.20.49"
aiobotocore = "^1.3.1"
s3fs = "^2021.6.0"
boto3 = "1.17"
pysftp = "^0.2.9"
sshtunnel = "^0.4.0"
PyYAML = "^5.4.1"
GitPython = "^3.1.17"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
